--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <p>This is me implementing what i have learned.</p>
-<p>this is my new feature on branch feature 1</p>
+<p>this is my new feature (nav)</p>
